--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.19)
 set(VERSION 0.1.0)
 
 project(hyprlock
-    DESCRIPTION "A gpu-accelerated screen lock for Hyprland"
+    DESCRIPTION "A gpu-accelerated screen lock for Hyprland (pyt0xic fork)"
     VERSION ${VERSION}
 )
 
